use highlight filter

--- a/app/styles/_components.users-list.scss
+++ b/app/styles/_components.users-list.scss
@@ -26,6 +26,7 @@
       display: table-cell;
       padding: 0 8px;
       vertical-align: middle;
+      .highlighted { background: yellow }
     }
   }
 
