--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,3 +2,4 @@
 @import 'components.dashboard';
 @import 'components.users-list';
 @import 'components.filter-employees';
+@import 'components.filter-chart-data';
