add styles for not found page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,3 +3,4 @@
 @import 'components.users-list';
 @import 'components.filter-employees';
 @import 'components.filter-chart-data';
+@import 'pages.not-found.scss';
